"Showcases how to specify the SWC configuration file as a dict"

load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

swc(
    name = "es5",
    srcs = ["in.ts"],
    out_dir = "es5",
    swcrc = {
        "jsc": {
            "target": "es5",
        },
    },
)

swc(
    name = "es2015",
    srcs = ["in.ts"],
    out_dir = "es2015",
    swcrc = {
        "jsc": {
            "target": "es2015",
        },
    },
)

write_source_files(
    name = "test",
    files = {
        "expected_es5.js": ":es5/in.js",
        "expected_es2015.js": ":es2015/in.js",
    },
)

# The source_maps attribute alone drives source map emission; a dict config
# does not need a sourceMaps entry.
swc(
    name = "es5_maps",
    srcs = ["in.ts"],
    out_dir = "es5_maps",
    source_maps = True,
    swcrc = {
        "jsc": {
            "target": "es5",
        },
    },
)

assert_contains(
    name = "test_maps",
    actual = "es5_maps/in.js",
    expected = "//# sourceMappingURL=in.js.map",
)
