load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_bazel_lib//lib:testing.bzl", "assert_outputs")

swc(
    name = "compile",
    srcs = [
        "src/a.ts",
        "src/b.ts",
    ],
    out_dir = "out",
    root_dir = "src",
    source_maps = "true",
)

# Since the srcs were in a filegroup, the swc macro cannot pre-declare the outputs.
# So there is no label ":a.js" that we can reference from the build file.
# However, a.js is still produced as one of the default outputs of the compile rule.
# We can verify this in an action that depends on the ":compile" rule and reads the files.
assert_outputs(
    name = "check_outputs",
    actual = "compile",
    expected = [
        "examples/root_dir/out/a.js",
        "examples/root_dir/out/a.js.map",
        "examples/root_dir/out/b.js",
        "examples/root_dir/out/b.js.map",
    ],
)
