load("@aspect_bazel_lib//lib:testing.bzl", "assert_json_matches")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

swc(
    name = "compile",
    srcs = [
        "src/a.ts",
        "src/b.ts",
        "src/sub/c.ts",
    ],
    out_dir = "out",
    root_dir = "src",
    source_maps = True,
)

# Assert that the output of "compile" rule matches the expected file.
write_source_files(
    name = "test",
    files = {
        "expected/a.js": ":out/a.js",
        "expected/b.js": ":out/b.js",
    },
)

[
    assert_json_matches(
        name = "test_%s" % f.replace("/", "-"),
        file1 = ":out/%s.js.map" % f,
        file2 = "expected/%s.js.map.golden" % f,
        filter1 = ".sourceRoot,.sources",
        filter2 = ".sourceRoot,.sources",
    )
    for f in [
        "a",
        "b",
        "sub/c",
    ]
]
