load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

# Specifies a custom location where a debugger should locate source files instead of relative source 
# locations. This string is treated verbatim inside the source-map where you can use a path or a URL.
swc(
    name = "compile",
    srcs = ["in.ts"],
    source_maps = True,
    # The custom location can be a path or an URL
    source_root = "https://my-website.com/debug/source/",
)

# Assert that the output of "compile" rule matches the expected file.
write_source_files(
    name = "test",
    files = {
        "expected.js": ":in.js",
        "expected.js.map": ":in.js.map",
    },
)
