load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "write_cli_repos",
    files = {
        "cli_repositories.bzl": "@swc_cli//:repositories.bzl",
    },
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//swc:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//swc:__subpackages__"],
)

bzl_library(
    name = "swc",
    srcs = ["swc.bzl"],
    visibility = ["//swc:__subpackages__"],
    deps = ["@bazel_skylib//lib:paths"],
)
