load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "swc_plugin",
    srcs = ["swc_plugin.bzl"],
    visibility = ["//swc:__subpackages__"],
    deps = ["//swc:providers"],
)

bzl_library(
    name = "swc",
    srcs = ["swc.bzl"],
    visibility = ["//swc:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:platform_utils",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//swc:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//swc:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//swc:__subpackages__"],
)
