load(":versions_test.bzl", "versions_test_suite")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@aspect_rules_js//js:nodejs_binary.bzl", "nodejs_binary")

versions_test_suite(name = "versions_test")

write_file(
    name = "gen_main",
    out = "main.js",
    content = ["require('@swc/cli')"],
)

genrule(
    name = "get_binding",
    srcs = [],
    outs = ["node.binding"],
    cmd = "cp $(SWC_BIN) $@",
    toolchains = ["@swc_toolchains//:resolved_toolchain"],
    tools = ["@swc_toolchains//:resolved_toolchain"],
)

nodejs_binary(
    name = "swc",
    data = [
        "@npm__swc_core-1.2.117",
        "@swc_cli//@swc/cli",
    ],
    entry_point = "main.js",
    #toolchains = ["@aspect_rules_swc//swc:toolchain_type"],
)

run_binary(
    name = "run",
    srcs = ["in.ts"],
    outs = ["actual"],
    args = [
        "$(location in.ts)",
        "-o",
        "$(location actual)",
    ],
    tool = ":swc",
)

diff_test(
    name = "test",
    file1 = "actual",
    file2 = "expected.js",
)
