load(":versions_test.bzl", "versions_test_suite")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@aspect_rules_js//js:nodejs_binary.bzl", "nodejs_binary")

versions_test_suite(name = "versions_test")

# Workaround: nodejs_binary doesn't support entry points under external yet
write_file(
    name = "gen_main",
    out = "main.js",
    content = ["require('@swc/cli')"],
)

nodejs_binary(
    name = "swc-cli",
    data = [
        "@npm__swc_core-1.2.117",
        "@swc_cli//@swc/cli",
    ],
    entry_point = "main.js",
    #toolchains = ["@aspect_rules_swc//swc:toolchain_type"],
)

genrule(
    name = "run",
    srcs = ["in.ts"],
    outs = ["actual.js"],
    cmd = """SWC_BINDING=$$(pwd)/$(SWC_BINDING) \\
        $(execpath :swc-cli) \\
        $(location in.ts) \\
        -o $(location actual.js)""",
    toolchains = ["@swc_toolchains//:resolved_toolchain"],
    tools = [
        ":swc-cli",
        "@swc_toolchains//:resolved_toolchain",
    ],
)

diff_test(
    name = "test",
    file1 = "actual.js",
    file2 = "expected.js",
)
