load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

# Runs `swc in.ts > ../../bazel-bin/examples/simple/in.js`
# You can run `bazel build --subcommands //examples/simple:compile`
# to see the exact command line Bazel runs.
swc(
    name = "compile",
    srcs = ["in.ts"],
    source_maps = True,
    swcrc = "//examples/rc:.swcrc",
)

write_source_files(
    name = "tests",
    files = {
        "expected.js": ":in.js",
        "expected.js.map": ":in.js.map",
    },
)
