load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("//examples/source_map_support:defs.bzl", "js_test")

swc(
    name = "compile",
    srcs = [
        "a.ts",
        "b.ts",
    ],
    source_maps = True,
)

js_test(
    name = "stack_trace_support_test",
    data = [":compile"],
    entry_point = ":a.js",
)

js_test(
    name = "stack_trace_support_with_chdir_test",
    chdir = "examples",
    data = [":compile"],
    entry_point = ":a.js",
)
